<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    android:id="@+id/loginconstraint"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
    tools:context=".login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/jeepneyfarebuddyicon"
            android:transitionName="logo_image" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/bungee"
            android:text="@string/welcomemsg"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:transitionName="logo_text" />

        <TextView
            android:id="@+id/loginprompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/antic"
            android:text="@string/signinprompt"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/username"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/usernamehint"
                app:cursorColor="@color/apricot"
                app:hintTextColor="@color/apricot"
                app:boxStrokeColor="@color/apricot"
                app:boxStrokeWidthFocused="3dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/password"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/passwordhint"
                app:passwordToggleEnabled="true"
                app:cursorColor="@color/apricot"
                app:hintTextColor="@color/apricot"
                app:passwordToggleTint="@color/black"
                app:boxStrokeColor="@color/apricot"
                app:boxStrokeWidthFocused="3dp">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/editpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/forgotpassword"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="10dp"
                android:background="@color/transparent"
                android:elevation="0dp"
                android:fontFamily="@font/antic"
                android:text="@string/forgot"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="italic" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/loginbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@color/apricot"
                android:fontFamily="@font/antic"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/registernewuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/transparent"
                android:elevation="0dp"
                android:fontFamily="@font/antic"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ProgressBar

            android:id="@+id/progressBarlogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:color="@drawable/progressbar"
            android:visibility="gone" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>

